<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:textSize="24sp"
        android:gravity="right|center_vertical"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="16dp"
        android:background="@drawable/input_text"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@id/text">

        <LinearLayout
            android:backgroundTint="#534D4D"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:shadowColor="#534D4D"
                android:id="@+id/seven"
                style="@style/buttonCalc"
                android:text="@string/button_7"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/eight"
                style="@style/buttonCalc"
                android:text="@string/button_8"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/nine"
                style="@style/buttonCalc"
                android:text="@string/button_9"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/four"
                style="@style/buttonCalc"
                android:text="@string/button_4"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/five"
                style="@style/buttonCalc"
                android:text="@string/button_5"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/six"
                style="@style/buttonCalc"
                android:text="@string/button_6"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/one"
                style="@style/buttonCalc"
                android:text="@string/button_1"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/two"
                style="@style/buttonCalc"
                android:text="@string/button_2"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/three"
                style="@style/buttonCalc"
                android:text="@string/button_3"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <View
                style="@style/buttonCalc"
                android:visibility="invisible"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/zero"
                style="@style/buttonCalc"
                android:text="@string/button_0"/>
            <View
                style="@style/buttonCalc"
                android:visibility="invisible"/>


        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/plus"
                style="@style/buttonCalc"
                android:text="@string/button_plus"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/minus"
                style="@style/buttonCalc"
                android:text="@string/button_minus"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/equals"
                style="@style/buttonCalc"
                android:text="@string/button_equal"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/multiply"
                style="@style/buttonCalc"
                android:text="@string/button_multi"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/division"
                style="@style/buttonCalc"
                android:text="@string/button_division"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/reset"
                style="@style/buttonCalc"
                android:text="@string/button_reset"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>